--- a/djangonautic/articles/templates/articles/article_list.html
+++ b/djangonautic/articles/templates/articles/article_list.html
@@ -6,5 +6,15 @@
   </head>
   <body>
     <h1>Article list</h1>
+    <div class="articles">
+      {% for article in articles %}
+          <div class="article">
+            <h1><a href="#">{{article.title}}</a> </h1>
+            <p>{{article.body}}</p>
+            <p>{{article.date}}</p>
+          </div>
+      {% endfor %}
+    </div>
+
   </body>
 </html>
