--- a/djangonautic/articles/templates/articles/article_list.html
+++ b/djangonautic/articles/templates/articles/article_list.html
@@ -1,16 +1,20 @@
+{% load static from staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Article home page</title>
+    <link rel="stylesheet" href="{% static 'styles.css'%}">
   </head>
   <body>
     <h1>Article list</h1>
+    <br>
     <div class="articles">
       {% for article in articles %}
           <div class="article">
-            <h1><a href="#">{{article.title}}</a> </h1>
-            <p>{{article.body}}</p>
+            <h2><a href="#">{{article.title}}</a></h2>
+            <p>{{article.snippet}}</p>
             <p>{{article.date}}</p>
           </div>
       {% endfor %}
