--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -10,6 +10,14 @@
   <body>
     <div class="wrapper">
       <h1><a href="{% url 'articles:list'%}"><img src="{% static 'logo.png' %}" alt=""></a></h1>
+      <nav>
+        <li>
+          <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Logout</button>
+          </form>
+        </li>
+      </nav>
      {% block content %}
 
       {% endblock %}
