--- a/djangonautic/articles/templates/articles/article_create.html
+++ b/djangonautic/articles/templates/articles/article_create.html
@@ -4,6 +4,11 @@
 
   <div class="create-article">
     <h1>Create a new article </h1>
+    <form class="site-form" action="{% url 'articles:create'%}" method="post" enctype='multipart/form-data'>
+      {% csrf_token %}
+      {{form}}
+      <input type="submit" value="Create">
+    </form>
   </div>
 
 {% endblock %}
