--- a/djangonautic/accounts/templates/accounts/login.html
+++ b/djangonautic/accounts/templates/accounts/login.html
@@ -11,7 +11,7 @@
         <input type="hidden" name="next" value="{{request.GET.next}}">
     {% endif %}
 
-    <input type="submit" value="Signup">
+    <input type="submit" value="Log In">
 
   </form>
 
